Fix Scrollbar. Show mobile version for up to 800px screen size.

--- a/src/assets/styles/components/_common.scss
+++ b/src/assets/styles/components/_common.scss
@@ -84,3 +84,7 @@ body {
   height: calc(100vh - 80px);
 }
 
+.overflowed-y {
+  overflow-y: auto;
+}
+
