--- a/src/assets/styles/components/_sidemenu.scss
+++ b/src/assets/styles/components/_sidemenu.scss
@@ -115,7 +115,7 @@ $sidemenu-box-shadow: inset 0 -1px 0 0 rgba($black, .3);
   margin-left: 0;
   position: fixed;
   top: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   z-index: 1031;
   background-color: $arc-clr-soil-dark;
   &-logo-section {
