--- a/src/assets/styles/components/_tabs.scss
+++ b/src/assets/styles/components/_tabs.scss
@@ -191,7 +191,6 @@
     flex-wrap: nowrap;
     white-space: nowrap;
     max-width: 100%;
-    overflow: auto !important;
   }
 }
 
